--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "chalk": "^4.1.1",
     "debug": "^4.3.1",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
